# ai-market-oracle

./: .dockerignore  .env  .env.production  .env.template  .gitignore  DEPLOYMENT_SSL.md  Dockerfile  README.md  api_server.py  bot.py  cleanup.sh  docker-compose.prod.yml  docker-compose.yml  health_check.py  main.py  manage_users.py  migrate_db.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  setup_ssl.sh  subscribers.db  worker.py
admin-dashboard/: admin.js  index.html
ai_market_oracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
landing-page/: app.js  index.html  privacy.html  terms.html
nginx/: nginx.conf
oracle/: analysis.py  api_schemas.py  auth.py  bot.py  brain.py  config.py  data.py  data_source.py  database.py  db_connection.py  db_models.py  email_service.py  exceptions.py  fundamentals.py  logger.py  message_formatter.py  news.py  notifier.py  payments.py  pipeline.py  prompts.py  schemas.py  telegram_bot.py
reports/: oracle_report_20251213_233300.html  oracle_report_20251213_233403.html
tests/: test_analysis.py  test_api_integration.py  test_broadcast.py  test_data.py  test_formatter.py  test_fundamentals.py  test_gate_v2.py  test_llm_resilience.py  test_news.py
