[project]
name = "ai-market-oracle"
version = "0.1.0"
description = "A personal AI market analyst for swing trading."
authors = [{name = "Ido Tuvia", email = "idotuvia@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "ta>=0.10.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.isort]
profile = "black"
